# Links

./: .gitignore  README.md  generate.py  index.html  index.jinja2  links.json  pyproject.toml  requirements.txt
.github/workflows/: render.yml
attets/css/: index.css  index.mobile.css
attets/js/: index.js
