[tool.pdm]
distribution = false

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "Links"
version = "0.1.0"
description = "Friend links."
license = { text = "MIT" }
dependencies = [
    "Jinja2",
    "pydantic",
    "cookit>=0.4.1",
]
requires-python = ">=3.9"
